[B]Please utilize Twilight Tips (Tools->Tips for Twilight Use) to catch up on any important new features. New features will be highlighted with a [COLOR chartreuse]NEW!!![/COLOR] label.[/B]

[COLOR dodgerblue][B]Version 3.2.50[/B][/COLOR]
- Added support for "Next Episode" skin button (EpisodeTools).
- INTERNAL: Removed "Playback Options" window video unpause.

[COLOR dodgerblue][B]Version 3.2.49[/B][/COLOR]
- [B]Tikipeter's version 3.2.28[/B]:
- Fix for Next Episode playback not honoring default action setting.

[COLOR dodgerblue][B]Version 3.2.48[/B][/COLOR]
- [B]Tikipeter's version 3.2.27[/B]:
- Removed "Autoscrape Next Episode".

[COLOR dodgerblue][B]Version 3.2.47[/B][/COLOR]
- [B]Tikipeter's version 3.2.26[/B]:
- Added Tools --> SETTINGS: External Scraper shortcut.

[COLOR dodgerblue][B]Version 3.2.46[/B][/COLOR]
- [B]Tikipeter's version 3.2.25[/B]:
- Couple of quick fixes.

[COLOR dodgerblue][B]Version 3.2.45[/B][/COLOR]
- [B]Tikipeter's version 3.2.24[/B]:
- Updated look of custom windows to align more aesthetically with FENtastic skin.
- Added "episode type" support to Next Episode window.
- Removed some redundant settings.
- Quick fixes.

[COLOR dodgerblue][B]Version 3.2.44[/B][/COLOR]
- [B]Tikipeter's version 3.2.23[/B]:
- Next Page icon fix.

[COLOR dodgerblue][B]Version 3.2.43[/B][/COLOR]
- [B]Tikipeter's version 3.2.22[/B]:
- Added episode type support for Jurial skins. Currently only Arctic Fuse. Users should thank Jurial for adding this feature to his skin. He has a donation link where you can throw him some money and love. Users will need to clear metadata in Tools->Clear Databases->Clear Meta Cache.
- Other fixes.

[COLOR dodgerblue][B]Version 3.2.42[/B][/COLOR]
- [B]Tikipeter's version 3.2.21[/B]:
- Added detection of when user changes skin font, so custom xmls can be remade.
- Quick fix for CAM, TELE, SCR results not showing when result highlights are based on quality.

[COLOR dodgerblue][B]Version 3.2.40[/B][/COLOR]