@@ -1,5 +1,8 @@
 [B]Please utilize Twilight Tips (Tools->Tips for Twilight Use) to catch up on any important new features. New features will be highlighted with a [COLOR chartreuse]NEW!!![/COLOR] label.[/B]
 
+[COLOR dodgerblue][B]Version 3.2.51[/B][/COLOR]
+- Small Ktuvit code bug fix.
+
 [COLOR dodgerblue][B]Version 3.2.50[/B][/COLOR]
 - Added support for "Next Episode" skin button (EpisodeTools).
 - INTERNAL: Removed "Playback Options" window video unpause.
